# tg-relay-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  comments.txt  docker-compose.yml
src/: commands.rs  comments.rs  config.rs  download.rs  error.rs  handler.rs  lib.rs  main.rs  telemetry.rs  utils.rs  validate.rs
src/handlers/: instagram.rs  mod.rs  tiktok.rs  twitter.rs  youtube.rs
src/validate/: mod.rs  utils.rs
