[package]
name = "tg-relay-rs"
version = "0.1.0"
authors = ["Kristofers Solo <dev@kristofers.xyz>"]
license = "MIT"
edition = "2024"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
dotenv = "0.15"
futures = "0.3"
infer = "0.19"
rand = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
shlex = "1.3.0"
teloxide = { version = "0.17", features = ["macros"] }
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-bunyan-formatter = { version = "0.3", default-features = false, optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
url = "2.5"

[features]
bunyan = ["tracing-bunyan-formatter"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
